Fixing bugs and making the moving background